# errorz

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  development.rst  index.rst
src/errorz/: __init__.py  __main__.py  hypothesis.py  mypy.py
tests/: test_api.py  type_checks.py  type_explorations.py
